[package]
name = "tusc"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "A tus resumable upload client written in Rust"
authors = ["Thomas <tom@unebaguette.fr>"]
repository = "https://github.com/vexahub/tusc"
keywords = ["tus", "client", "upload", "resumable"]
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util"] }
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
url = "2.5"
